<resources>
    <string name="app_name">FawcettKeithWorkoutEssentials</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="rounds">rounds</string>
    <string name="done">Done!</string>
    <string name="start">Start</string>
    <string name="defaultTime">00:00</string>
    <string name="seconds_work">seconds work</string>
    <string name="seconds_rest">seconds rest</string>
    <string name="workout">Workout</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="_1_reps">1 reps</string>
    <string name="_1_sets">1 sets</string>
    <string name="date">Date</string>
    <string name="base_sound">Base Sound</string>
    <string name="train">Train</string>
    <string name="thunder">Thunder</string>
    <string name="rooster">Rooster</string>
    <string name="owl">Owl</string>
    <string name="merlin">Merlin</string>
    <string name="foghorn">Foghorn</string>
    <string name="falcon">Falcon</string>
    <string name="duck">Duck</string>
    <string name="dove">Dove</string>
    <string name="dog">Dog</string>
    <string name="crow">Crow</string>
    <string name="clock_chime">Clock Chime</string>
    <string name="overlay_sounds">Overlay Sounds</string>
    <string name="crickets">Crickets</string>
    <string name="fire">Fire</string>
    <string name="rain">Rain</string>
    <string name="ocean">Ocean</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="_00_00">00:00</string>
    <string name="line_3">Line 3</string>
    <string name="_0">0</string>
    <string name="line_2">Line 2</string>
    <string name="line_1">Line 1</string>
    <string name="sound_mixer">Sound Mixer</string>
    <string name="timers">Timers</string>
    <string name="workout_roulette">Workout Roulette</string>
    <string name="custom_workout">Custom Workout</string>
    <string name="workout_history">Workout History</string>
    <string name="clear">clear</string>
    <string name="save">save</string>
    <string name="spin">spin</string>

    <string-array name="TimersArray">
        <item>Stop Watch</item>
        <item>Countdown</item>
        <item>Resetting</item>
        <item>Interval</item>
    </string-array>
</resources>
