<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background">


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"/>

    <LinearLayout
        android:id="@+id/chooser_line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_subtract_1"
            android:text="@string/minus" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_add_1"
            android:text="@string/add" />



        <TextView
            android:text="@string/_0"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_counter_1"
            android:padding="16dp"/>

        <TextView
            android:text="@string/line_1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_description_1"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/chooser_line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_subtract_2"
            android:text="@string/minus" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_add_2"
            android:text="@string/add" />

        <TextView
            android:text="@string/_0"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_counter_2"
            android:padding="16dp"/>

        <TextView
            android:text="@string/line_2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_description_2"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/chooser_line_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_subtract_3"
            android:text="@string/minus" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_add_3"
            android:text="@string/add"/>

        <TextView
            android:text="@string/_0"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_counter_3"
            android:padding="16dp"/>

        <TextView
            android:text="@string/line_3"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_description_3"/>


    </LinearLayout>

    <TextView
        android:layout_gravity="center"
        android:text= "@string/_00_00"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:id="@+id/textView_Timer"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stop_button"
                android:text="@string/stop" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_button"
                android:text="@string/start" />


        </RelativeLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button"
            android:text="@string/reset" />


    </LinearLayout>




</LinearLayout>