<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/date"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/history_date"
        android:padding="16dp"/>


        <LinearLayout
            android:id="@+id/history_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/workout"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/history_tv_exercise1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>


                <TextView
                    android:text="@string/_1_reps"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_tv_reps1"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/_1_sets"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_tv_sets1"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/workout"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/history_tv_exercise2"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/_1_reps"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_tv_reps2"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/_1_sets"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_tv_sets2"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/workout"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/history_tv_exercise3"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/_1_reps"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_tv_reps3"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/_1_sets"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_tv_sets3"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_line4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/workout"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/history_tv_exercise4"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/_1_reps"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_tv_reps4"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/_1_sets"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_tv_sets4"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_line5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/workout"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/history_tv_exercise5"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/_1_reps"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_tv_reps5"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/_1_sets"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_tv_sets5"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>